# digital-sand

./: README.md  control_board.kicad_pcb
board/: IMG_2090.HEIC  IMG_2091.HEIC  control_board.kicad_pcb  control_board.kicad_prl  control_board.kicad_pro  control_board.kicad_sch  control_board.step  control_board.xml  fp-info-cache  sym-lib-table
board/output/v0/: control_board-B_Cu.gbl  control_board-B_Mask.gbs  control_board-B_Paste.gbp  control_board-B_Silkscreen.gbo  control_board-Edge_Cuts.gm1  control_board-F_Cu.gtl  control_board-F_Mask.gts  control_board-F_Paste.gtp  control_board-F_Silkscreen.gto  control_board-In1_Cu.g2  control_board-In2_Cu.g3  control_board-NPTH-drl_map.gbr  control_board-NPTH.drl  control_board-PTH-drl_map.gbr  control_board-PTH.drl
board/output/v1/: control_board-B_Cu.gbl  control_board-B_Mask.gbs  control_board-B_Paste.gbp  control_board-B_Silkscreen.gbo  control_board-Edge_Cuts.gm1  control_board-F_Cu.gtl  control_board-F_Mask.gts  control_board-F_Paste.gtp  control_board-F_Silkscreen.gto  control_board-In1_Cu.g2  control_board-In2_Cu.g3  control_board-NPTH-drl_map.gbr  control_board-NPTH.drl  control_board-PTH-drl_map.gbr  control_board-PTH.drl
board/output/v2/: control_board-B_Cu.gbl  control_board-B_Mask.gbs  control_board-B_Paste.gbp  control_board-B_Silkscreen.gbo  control_board-Edge_Cuts.gm1  control_board-F_Cu.gtl  control_board-F_Mask.gts  control_board-F_Paste.gtp  control_board-In1_Cu.g2  (+6 more)
code/: CMakeLists.txt  README.md
code/release/: CMakeLists.txt  a.out  accel.c  ball.cpp  ball.hpp  common.c  common.h  main.c  main.cpp
(+17 files in other folders)
